--- a/styles/main.css
+++ b/styles/main.css
@@ -126,3 +126,59 @@ button:hover {
 }
 
 /* Featured  */
+
+/* Footer */
+footer {
+  font-family: "Titillium Web", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  height: 502px;
+  width: auto;
+}
+footer h1 {
+  color: white;
+  font-size: 40px;
+}
+footer p {
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 26px;
+  padding: 0 355px;
+}
+.social-media {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  margin-top: 32px;
+}
+.social-media .odd > i {
+  font-size: 34px;
+  color: #ffffff;
+}
+.social-media .odd > i:hover {
+  font-size: 34px;
+  color: #747474;
+}
+.social-media .even > i {
+  font-size: 34px;
+  color: #a982d5;
+}
+.social-media .even > i:hover {
+  font-size: 34px;
+  color: #c1a7df;
+}
+
+.copyright {
+  margin-top: 50px;
+  border-top: 2px solid rgba(255, 255, 255, 0.571);
+}
+.copyright p {
+  margin-top: 50px;
+}
