--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,7 @@ nav {
   background-color: rgba(0, 0, 0, 0.888);
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .logo {
@@ -126,12 +127,99 @@ button:hover {
   text-align: center;
   margin: 30px;
 }
+.section-p {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  margin: 10px;
+}
 .section-div {
   margin-top: 150px;
   margin-bottom: 100px;
 }
 
 /* Featured  */
+
+/* Card */
+
+.card-div {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 15px;
+  width: 80%; /* Set a specific width */
+  margin-left: auto; /* Set left margin to auto */
+  margin-right: auto; /* Set right margin to auto */
+
+  padding: 1rem; /* Example padding */
+}
+
+.card {
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+  background-color: #ffffff;
+}
+
+/* Card Image */
+.card-img {
+  margin-top: 20px;
+  width: 250px;
+  object-fit: cover;
+}
+
+/* Card Body */
+.card-body {
+  padding: 1rem;
+  width: 100%;
+}
+
+/* Card Title */
+.card-title {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 15px;
+
+  margin-bottom: 0.5rem;
+  font-weight: 400;
+}
+
+/* Card Text */
+.card-text {
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  color: #8b79d8;
+}
+
+/* Card Button */
+.card-button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #8b79d8;
+  color: #ffffff;
+  text-align: center;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.card-button:hover {
+  background-color: #9e93d1;
+}
+
+/* Card Hover Effect */
+.card:hover {
+  transform: scale(1.05);
+}
 
 /* Footer */
 footer {
