added some else condition if card not found as array

--- a/styles/main.css
+++ b/styles/main.css
@@ -146,13 +146,19 @@ button:hover {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 15px;
-  width: 80%; /* Set a specific width */
-  margin-left: auto; /* Set left margin to auto */
-  margin-right: auto; /* Set right margin to auto */
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 
-  padding: 1rem; /* Example padding */
+  padding: 1rem;
 }
+.no-card-div {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 
+  padding: 1rem;
+}
 .card {
   max-width: 300px;
   display: flex;
@@ -165,6 +171,13 @@ button:hover {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
   background-color: #ffffff;
+}
+.no-card {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 40px;
+  text-align: center;
+  margin: 30px;
+  color: #c5c5c5;
 }
 
 /* Card Image */
