--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,10 @@
 .hidden {
   display: none;
 }
+.flex {
+  display: flex;
+}
+
 
 /* Font */
 
@@ -44,18 +48,56 @@ nav {
 }
 .cart-button {
   border: none;
-  border-radius: 50%; /* Use 50% for perfect circle */
-  width: 50px; /* Set a fixed width */
-  height: 50px; /* Set a fixed height */
-  display: flex; /* Center the icon */
-  align-items: center; /* Vertically center */
-  justify-content: center; /* Horizontally center */
-  background-color: #8b79d8; /* Optional: background color */
-  cursor: pointer; /* Change cursor on hover */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #8b79d8;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+}
+
+.cart-button i {
+  font-size: 20px;
+  color: white;
+}
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background-color: rgb(255, 255, 255);
+  color: white;
+  border-radius: 50%;
+  padding: 2px 5px;
+  font-size: 12px;
+  font-weight: bold;
+  min-width: 20px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+  animation: pulse 2s infinite; 
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2); 
+  }
+  100% {
+    transform: scale(1); /
+  }
+}
+#cart-count-text {
+  color: #8b79d8;
+  text-align: center;
 }
 
 .cart-button:hover {
-  background-color: #6653ba; /* Optional: hover effect */
+  background-color: #6653ba;
 }
 .logo {
   cursor: pointer;
@@ -274,7 +316,6 @@ button:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 6px rgba(174, 94, 255, 0.541);
 }
-
 
 /* Footer */
 footer {
