--- a/styles/cart.css
+++ b/styles/cart.css
@@ -14,7 +14,9 @@
   font-family: "Titillium Web", sans-serif;
   font-size: 40px;
   text-align: center;
-  margin: 30px;
+  color: #8b84a9;
+  margin-top: 80px;
+  margin-bottom: 120px;
 }
 
 .table-price {
@@ -82,25 +84,24 @@
 
 /* Modal */
 .modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1050; 
+  display: none;
+  position: fixed;
+  z-index: 1050;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgba(0, 0, 0, 0.5); 
-  opacity: 0; 
-  transform: translateY(-20px); 
-  transition: opacity 0.3s ease, transform 0.3s ease; 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-
 .modal.show {
-  display: block; 
-  opacity: 1; 
-  transform: translateY(0); 
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .modal-title {
@@ -109,12 +110,10 @@
   margin-bottom: 30px;
 }
 
-
 .modal-dialog {
   margin: 30px auto;
-  max-width: 80%; 
+  max-width: 80%;
 }
-
 
 .modal-content {
   background-color: #fff;
