--- a/styles/toast.css
+++ b/styles/toast.css
@@ -1,8 +1,7 @@
-#toast {
+.toast {
   visibility: hidden;
   max-width: 50px;
   height: 50px;
-  /*margin-left: -125px;*/
   margin: auto;
   background-color: #333;
   color: #fff;
@@ -15,9 +14,11 @@
   right: 0;
   bottom: 30px;
   font-size: 17px;
-  white-space: nowrap;
+  white-space: nowrap; 
+
 }
-#toast #img {
+
+.toast .img {
   width: 50px;
   height: 50px;
 
@@ -32,26 +33,26 @@
   color: #fff;
 }
 
-#toast #img img {
-  width: 50%; /* Adjust to fit the container */
-  height: auto; /* Maintain aspect ratio */
+.toast .img img {
+  width: 50%; 
+  height: auto; 
 }
-#toast #desc {
+
+.toast .desc {
   color: #fff;
-
   padding: 16px;
-
   overflow: hidden;
   white-space: nowrap;
 }
 
-#toast.show {
+.toast.show {
   visibility: visible;
-  -webkit-animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 2s,
-    fadeout 0.5s 2.5s;
+  -webkit-animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 4s,
+    fadeout 0.5s 4.5s;
   animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 4s,
     fadeout 0.5s 4.5s;
 }
+
 
 @-webkit-keyframes fadein {
   from {
@@ -92,6 +93,7 @@
     min-width: 350px;
   }
 }
+
 @-webkit-keyframes stay {
   from {
     min-width: 350px;
@@ -109,6 +111,7 @@
     min-width: 350px;
   }
 }
+
 @-webkit-keyframes shrink {
   from {
     min-width: 350px;
